[project]
name = "llm-tool-call-cost-benchmark"
version = "0.1.0"
description = "Benchmark the cost of tool calls in LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.69.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "python-dotenv>=1.1.0",
    "unifai-sdk>=0.3.1",
]
